Добавил поддержку Amazon S3 для чтения данных о продуктах из файла.

--- a/DataProvider/DataProvider.csproj
+++ b/DataProvider/DataProvider.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.S3" Version="3.7.4.6" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
